--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PizzaTam</title>
     <!--GOOGLE FONT lINK-->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,100&display=swap" rel="stylesheet">
     <!-- Bootstrap CSS  link-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -21,15 +22,20 @@
         <!--Navbar structure-->
         <div class="container">
             <nav>
-                <h1 class="brand"><a href="index.html"><span>P</span>izza<span>T</span>am</a></h1>
+                <h1 class="brand"><a href="index.html"><span>P</span>izza<span>T</span>am</a></h1> 
                 <ul>
-                    <li><a href="#">Home</a></li>
+                    <li><a href="#home">Home</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Menu</a></li>
                     <li><a href="#">Order</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
+            <div class ="home" id="home">
+                <h2> Its not just food</h2>
+                <h1>Its an <span>Experience</span></h1><br>
+                <p>The Pizza at <em>PizzaTam </em>is love at first bite!The homemade pizza dough is produced <br>in-house daily  and is another reason why the Pizza at PizzaTam always tastes better.<br>One stop place for you to enjoy the best Pizzas in Town.</p>
+            </div>
         </div>
     </header>
 
