--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <!--Navbar structure-->
         <div class="container">
             <nav>
-                <h1 class="brand"><a href="index.html"><span>P</span>izza<span>T</span>am</a></h1> 
+                <h1 class="brand"><a href="index.html"><span>P</span>izza<span>T</span>am</a></h1>
                 <ul>
                     <li><a href="#home">Home</a></li>
                     <li><a href="#">About</a></li>
@@ -31,11 +31,22 @@
                     <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
-            <div class ="home" id="home">
+            <div class="home" id="home">
                 <h2> Its not just food</h2>
                 <h1>Its an <span>Experience</span></h1><br>
-                <p>The Pizza at <em>PizzaTam </em>is love at first bite!The homemade pizza dough is produced <br>in-house daily  and is another reason why the Pizza at PizzaTam always tastes better.<br>One stop place for you to enjoy the best Pizzas in Town.</p>
-            </div>
+                <p>The Pizza at <em>PizzaTam </em>is love at first bite!The homemade pizza dough is produced
+                    <br>in-house daily and is another reason why the Pizza at PizzaTam always tastes better.<br>One stop
+                    place for you to enjoy the best Pizzas in Town.</p><br><br>
+                    <div class="wrap">
+                        <div class="item">
+                            <button class="btn-outline">Menu</button> 
+                        </div>
+                    </div>
+                    
+                </div>
+                <div class="slider-area">
+                    
+                </div>
         </div>
     </header>
 
