--- a/index.html
+++ b/index.html
@@ -36,17 +36,63 @@
                 <h1>Its an <span>Experience</span></h1><br>
                 <p>The Pizza at <em>PizzaTam </em>is love at first bite!The homemade pizza dough is produced
                     <br>in-house daily and is another reason why the Pizza at PizzaTam always tastes better.<br>One stop
-                    place for you to enjoy the best Pizzas in Town.</p><br><br>
-                    <div class="wrap">
-                        <div class="item">
-                            <button class="btn-outline">Menu</button> 
-                        </div>
+                    place for you to enjoy the best Pizzas in Town.
+                </p><br><br>
+                <div class="wrap">
+                    <div class="item">
+                        <button class="btn-outline">Menu</button>
                     </div>
-                    
                 </div>
-                <div class="slider-area">
-                    
+
+            </div>
+            <div class="slider-area">
+                <div class="bd-example">
+                    <div id="carouselExampleCaptions" class="carousel-slide" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                            <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+                            <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+                            <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+                        </ol>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="./assets/testimony1.jpeg" class="d-block-w-100" alt="..." height="">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h4>Wangui Thoithi</h4>
+                                    <h5>Designer</h5>
+                                    <p>PizzaTam is the place to be !</p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="./assets/testimony4.jpeg" class="d-block-w-100" alt="..." height="">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h4>William Murage</h4>
+                                    <h5>Developer</h5>
+                                    <p>Great Pizza!Great customer service!Great prices!</p>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="./assets/testimony5.jpeg" class="d-block-w-100" alt="..." height="">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h4>Wairimu King'ori</h4>
+                                    <h5>Content Creator</h5>
+                                    <p>Its everything for me!</p>
+                                </div>
+                            </div>
+                        </div>
+                        <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button"
+                            data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselExampleCaptions" role="button"
+                            data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </div>
                 </div>
+
+            </div>
         </div>
     </header>
 
