add & delete images

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
                     <li><a href="#">Contact</a></li>
                 </ul>
             </nav>
+            <!--end of navbar structure-->
+            <!--start of home structure-->
             <div class="home" id="home">
                 <h2> Its not just food</h2>
                 <h1>Its an <span>Experience</span></h1><br>
@@ -95,11 +97,21 @@
             </div>
         </div>
     </header>
-
-
-
-
+    <!--end of home structure-->
     <!--End of header section-->
+
+    <!--Start of About Section-->
+    <div class="container-fluid">
+        <div class="about">
+            <div class="image">
+                
+            </div>
+        </div>
+    </div>
+
+
+
+    <!--End of About Section -->
 
 
 
