add about section

--- a/index.html
+++ b/index.html
@@ -101,17 +101,46 @@
     <!--End of header section-->
 
     <!--Start of About Section-->
-    <div class="container-fluid">
-        <div class="about">
-            <div class="image">
-                
+    <section>
+        <div class="container-fluid" id="about">
+            <h2>About</h2>
+            <div class="about">
+
+                <div class="image1">
+                    <img src="./assets/aboutttt-removebg-preview.png" alt="" height="200px">
+
+                </div><br>
+
+                <div class="text">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia tenetur quam recusandae
+                        obcaecati
+                        unde nobis animi nulla,<br> corporis adipisci repellat? Ullam doloribus aliquid ipsa a dolorum
+                        nihil
+                        tempore accusantium ipsam.Lorem ipsum dolor sit amet<br> consectetur adipisicing elit. Officia
+                        tenetur quam recusandae obcaecati
+                        unde nobis animi nulla, corporis adipisci repellat? <br>Ullam doloribus aliquid ipsa a dolorum
+                        nihil
+                        tempore accusantium ipsam.Lorem ipsum dolor sit amet consectetur adipisicing elit.<br> Officia
+                        tenetur quam recusandae obcaecati
+                        unde nobis animi nulla, corporis adipisci repellat? Ullam doloribus aliquid ipsa a dolorum<br>
+                        nihil
+                        tempore accusantium ipsam.Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia
+                        tenetur quam recusandae obcaecati<br>
+                        unde nobis animi nulla, corporis adipisci repellat? Ullam doloribus aliquid ipsa a dolorum nihil
+                        tempore accusantium ipsam.</p>
+                </div><br>
+                <div class="image2">
+                    <img src="./assets/abouttttiii-removebg-preview.png" alt="" height="200">
+                </div><br>
+
             </div>
         </div>
-    </div>
 
 
 
-    <!--End of About Section -->
+
+        <!--End of About Section -->
+    </section>
 
 
 
