--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <!-- Bootstrap CSS  link-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!---jquery link-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <!---CSS Styling link-->
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="style.css">
@@ -25,7 +27,7 @@
                 <h1 class="brand"><a href="index.html"><span>P</span>izza<span>T</span>am</a></h1>
                 <ul>
                     <li><a href="#home">Home</a></li>
-                    <li><a href="#">About</a></li>
+                    <li><a href="#about">About</a></li>
                     <li><a href="#">Menu</a></li>
                     <li><a href="#">Order</a></li>
                     <li><a href="#">Contact</a></li>
@@ -45,7 +47,6 @@
                         <button class="btn-outline">Menu</button>
                     </div>
                 </div>
-
             </div>
             <div class="slider-area">
                 <div class="bd-example">
@@ -110,7 +111,6 @@
                     <img src="./assets/aboutttt-removebg-preview.png" alt="" height="200px">
 
                 </div><br>
-
                 <div class="text">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia tenetur quam recusandae
                         obcaecati
@@ -132,14 +132,50 @@
                 <div class="image2">
                     <img src="./assets/abouttttiii-removebg-preview.png" alt="" height="200">
                 </div><br>
-
             </div>
         </div>
-
-
-
-
         <!--End of About Section -->
+        <!--Stat of Menu section-->
+        <div class="container-fluid" id="menu">
+            <div class="menu">
+                <h2>Menu</h2><br><br>
+                <div class="row">
+                    <div class="col-sm-12 col-md-6 col-lg-3" id="port1">
+                        <h3 class="dark">Chicken Tikka</h3>
+                        <img src="./assets/nobackpizza.png" alt="" width="100%" class="animation">
+                        <div class="p1">
+                            <h4>Large</h4>
+                            <p class="large">Ksh 1200</p>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-md-6 col-lg-3 " id="port1">
+                        <h3 class="dark">Chicken Tikka</h3>
+                        <img src="./assets/nobackpizza.png" alt="" width="100%" class="animation">
+                        <div class="p1">
+                            <h4>Medium</h4>
+                            <p class="large">Ksh 900</p>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-md-6 col-lg-3 " id="port1">
+                        <h3 class="dark">Chicken Tikka</h3>
+                        <img src="./assets/nobackpizza.png" alt="" width="100%" class="animation">
+                        <div class="p1">
+                            <h4>Small</h4>
+                            <p class="large">Ksh 750</p>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-md-6 col-lg-3 " id="port1">
+                        <h3 class="dark">Chicken Tikka</h3>
+                        <img src="./assets/nobackpizza.png" alt="" width="100%" class="animation">
+                        <div class="p1">
+                            <h4>One Piecer</h4>
+                            <p class="large">Ksh 500</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--End of menu section-->
     </section>
 
 
@@ -149,7 +185,7 @@
 
 
     <!---Javascript link section-->
-
+    <script src="main.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
@@ -159,7 +195,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
-    <script src="main.js"></script>
+
     <!---End of Js link section-->
 
 
