add order section

--- a/index.html
+++ b/index.html
@@ -174,8 +174,49 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div><br><br>
         <!--End of menu section-->
+        <!---Start of Order Section-->
+
+        <div class="container">
+            <h2>Place Your Order</h2><br>
+            <div class="selection">
+                <div class="flavour"><
+                <select id="Flavour">
+                    <option value="volvo">Flavour</option>
+                    <option value="volvo">Chicken Tikka</option>
+                    <option value="saab">Hawiiann</option>
+                    <option value="opel">Chicken Barbeque</option>
+                    <option value="audi">Italian Pizza</option>
+                  </select>
+                  </div><br><br>
+                  <div class="toppings">
+                  <select id="Toppings">
+                    <option value="volvo">Chicken Tikka</option>
+                    <option value="saab">Hawiiann</option>
+                    <option value="opel">Chicken Barbeque</option>
+                    <option value="audi">Italian Pizza</option>
+                  </select>
+                  </div><br><br>
+                  <div class="crust">
+                  <select id="Crust">
+                    <option value="volvo">Chicken Tikka</option>
+                    <option value="saab">Hawiiann</option>
+                    <option value="opel">Chicken Barbeque</option>
+                    <option value="audi">Italian Pizza</option>
+                  </select>
+                  </div><br><br>
+                  <div class="quantity">
+                  <select id="Number">
+                    <option value="volvo">Chicken Tikka</option>
+                    <option value="saab">Hawiiann</option>
+                    <option value="opel">Chicken Barbeque</option>
+                    <option value="audi">Italian Pizza</option>
+                  </select>
+                  </div><br><br>
+            </div>
+        </div>
+        <!---End of Order Section-->
     </section>
 
 
