--- a/index.html
+++ b/index.html
@@ -174,47 +174,57 @@
                     </div>
                 </div>
             </div>
-        </div><br><br>
+        </div>
         <!--End of menu section-->
         <!---Start of Order Section-->
 
-        <div class="container">
+        <div class="container-fluid" id="selection">
             <h2>Place Your Order</h2><br>
             <div class="selection">
-                <div class="flavour"><
-                <select id="Flavour">
-                    <option value="volvo">Flavour</option>
-                    <option value="volvo">Chicken Tikka</option>
-                    <option value="saab">Hawiiann</option>
-                    <option value="opel">Chicken Barbeque</option>
-                    <option value="audi">Italian Pizza</option>
-                  </select>
-                  </div><br><br>
-                  <div class="toppings">
-                  <select id="Toppings">
-                    <option value="volvo">Chicken Tikka</option>
-                    <option value="saab">Hawiiann</option>
-                    <option value="opel">Chicken Barbeque</option>
-                    <option value="audi">Italian Pizza</option>
-                  </select>
-                  </div><br><br>
-                  <div class="crust">
-                  <select id="Crust">
-                    <option value="volvo">Chicken Tikka</option>
-                    <option value="saab">Hawiiann</option>
-                    <option value="opel">Chicken Barbeque</option>
-                    <option value="audi">Italian Pizza</option>
-                  </select>
-                  </div><br><br>
-                  <div class="quantity">
-                  <select id="Number">
-                    <option value="volvo">Chicken Tikka</option>
-                    <option value="saab">Hawiiann</option>
-                    <option value="opel">Chicken Barbeque</option>
-                    <option value="audi">Italian Pizza</option>
-                  </select>
-                  </div><br><br>
+                <select name="" id="">
+                    <option value="" selected class="selected">Choose Your Flavour...</option>
+                    <option value="">Cheese Pizza</option>
+                    <option value="">Veggie Pizza</option>
+                    <option value="">Pepperoni Pizza</option>
+                    <option value="">Meat Pizza</option>
+                    <option value="">Margherita Pizza</option>
+                    <option value="">BBQ Chicken Pizza</option>
+                    <option value="">Hawaiian Pizza</option>
+                    <option value="">Buffalo Pizza</option>
+                    <option value="">Supreme Pizza</option>
+                    <option value="">Works Pizza</option>
+                </select><br><br><br><br><br><br>
+
+                <select name="" id="size">
+                    <option value="" selected class="selected">Choose Your Size...</option>
+                    <option value="">Large</option>
+                    <option value="">Medium</option>
+                    <option value="">Small</option>
+                </select><br><br><br><br><br>
+
+                <select name="" id="crust">
+                    <option value="" selected class="selected">Choose Your Crust...</option>
+                    <option value="">Crispy</option>
+                    <option value="">Stuffed</option>
+                    <option value="">Gluten-free</option>
+                </select><br><br><br><br><br>
+
+                <select name="" id="toppings">
+                    <option value="" selected class="selected">Choose Your Crust...</option>
+                    <option value="">Mushroom</option>
+                    <option value="">Sausage</option>
+                    <option value="">Bacon</option>
+                    <option value="">Extra Cheese</option>
+                    <option value="">Pineapple</option>
+                    <option value="">Pepperoni</option>
+                </select><br><br><br><br>
+
+                <input name="" type="number" id="number" placeholder="Number ..." min="1">
+                    
+                
+
             </div>
+
         </div>
         <!---End of Order Section-->
     </section>
