--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PizzaTam</title>
+    <!--Font Awesome link-->
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <!--GOOGLE FONT lINK-->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,100&display=swap" rel="stylesheet">
@@ -28,9 +31,9 @@
                 <ul>
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">About</a></li>
-                    <li><a href="#">Menu</a></li>
-                    <li><a href="#">Order</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#menu">Menu</a></li>
+                    <li><a href="#order">Order</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
             <!--end of navbar structure-->
@@ -220,13 +223,51 @@
                 </select><br><br><br><br>
 
                 <input name="" type="number" id="number" placeholder="Number ..." min="1">
-                    
-                
-
-            </div>
-
+            </div><br><br>
         </div>
         <!---End of Order Section-->
+        <!----Start of Footer Section-->
+        <footer>
+            <div class="footer">
+                <div class="container" id="foot">
+                    <h2>Contacts</h2><br><br id="contact">
+                    <div class="row">
+                        <div class="footer-col1">
+                          <img src="./assets/fooooooterrr2-removebg-preview.png" alt="">  
+                        </div>
+                        <div class="footer-col2">
+                            <h5><span>P</span>izza<span>T</span>am</h5>
+                            <ul>
+                                <li><a href="home" id=""> Home</a></li>
+                                <li><a href="about" id="">About</a></li>
+                                <li><a href="menu" id="">Menu</a></li>
+                                <li><a href="order" id="">Order</a></li>
+                            </ul>
+                        </div>
+                        <div class="footer-col3">
+                            <h5>Contacts</h5>
+                            <ul>
+                                <li><a href="#">pizzatam@gmail.com</a></li>
+                                <li><a href="#">070000000000</a></li>
+                                <li><a href="#">Nairobi,Kenya</a></li>
+
+                            </ul>
+                        </div>
+                        <div class="footer-col4">
+                            <h5>Social Media</h5>
+                            <div class="follow-us">
+                                <a href="facebook"><i class="fab fa-facebook-f"></i></a>
+                                <a href="whatsapp"><i class="fab fa-whatsapp"></i></a>
+                                <a href="instagram"><i class="fab fa-instagram"></i></a>
+                                <a href="twitter"><i class="fab fa-twitter"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <!---End of Footer ---->
+        </footer>
     </section>
 
 
