delete menu section

--- a/index.html
+++ b/index.html
@@ -136,48 +136,62 @@
                     <img src="./assets/abouttttiii-removebg-preview.png" alt="" height="200">
                 </div><br>
             </div>
-        </div>
+        </div><br><br>
         <!--End of About Section -->
         <!--Stat of Menu section-->
-        <div class="container-fluid" id="menu">
+        <div class="container">
             <div class="menu">
-                <h2>Menu</h2><br><br>
-                <div class="row">
-                    <div class="col-sm-12 col-md-6 col-lg-3" id="port1">
-                        <h3 class="dark">Chicken Tikka</h3>
-                        <img src="./assets/nobackpizza.png" alt="" width="100%" class="animation">
-                        <div class="p1">
-                            <h4>Large</h4>
-                            <p class="large">Ksh 1200</p>
+                ,<h2>Menu</h2><br><br>
+                <div class="menu1">
+                    <div class="card" style="width: 18rem;">
+                        <img src="./assets/nobackpizza.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
                         </div>
                     </div>
-                    <div class="col-sm-12 col-md-6 col-lg-3 " id="port1">
-                        <h3 class="dark">Chicken Tikka</h3>
-                        <img src="./assets/nobackpizza.png" alt="" width="100%" class="animation">
-                        <div class="p1">
-                            <h4>Medium</h4>
-                            <p class="large">Ksh 900</p>
+                    <div class="card" style="width:18rem;">
+                        <img src="./assets/nobackpizza.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
                         </div>
                     </div>
-                    <div class="col-sm-12 col-md-6 col-lg-3 " id="port1">
-                        <h3 class="dark">Chicken Tikka</h3>
-                        <img src="./assets/nobackpizza.png" alt="" width="100%" class="animation">
-                        <div class="p1">
-                            <h4>Small</h4>
-                            <p class="large">Ksh 750</p>
+                    <div class="card" style="width:18rem;">
+                        <img src="./assets/nobackpizza.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
                         </div>
                     </div>
-                    <div class="col-sm-12 col-md-6 col-lg-3 " id="port1">
-                        <h3 class="dark">Chicken Tikka</h3>
-                        <img src="./assets/nobackpizza.png" alt="" width="100%" class="animation">
-                        <div class="p1">
-                            <h4>One Piecer</h4>
-                            <p class="large">Ksh 500</p>
+                </div><br><br>
+                <div class="menu2">
+                    <div class="card" style="width:18rem;">
+                        <img src="./assets/nobackpizza.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
                         </div>
                     </div>
-                </div>
+                    <div class="card" style="width:18rem;">
+                        <img src="./assets/nobackpizza.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                        </div>
+                    </div>
+                    <div class="card" style="width:18rem;">
+                        <img src="./assets/nobackpizza.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                        </div>
+                    </div>
+                </div><br><br>
+
             </div>
-        </div>
+        </div><br><br>
+
         <!--End of menu section-->
         <!---Start of Order Section-->
 
@@ -233,7 +247,7 @@
                     <h2>Contacts</h2><br><br id="contact">
                     <div class="row">
                         <div class="footer-col1">
-                          <img src="./assets/fooooooterrr2-removebg-preview.png" alt="">  
+                            <img src="./assets/fooooooterrr2-removebg-preview.png" alt="">
                         </div>
                         <div class="footer-col2">
                             <h5><span>P</span>izza<span>T</span>am</h5>
