--- a/index.html
+++ b/index.html
@@ -146,22 +146,22 @@
                     <div class="card" style="width: 18rem;">
                         <img src="./assets/nobackpizza.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
+                            <h4>Large</h4>
+                            <p class="card-text">Ksh 1200</p>
                         </div>
                     </div>
                     <div class="card" style="width:18rem;">
                         <img src="./assets/nobackpizza.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
+                            <h4>Medium</h4>
+                            <p class="card-text">Ksh 900</p>
                         </div>
                     </div>
                     <div class="card" style="width:18rem;">
                         <img src="./assets/nobackpizza.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
+                            <h4>Small</h4>
+                            <p class="card-text">Ksh 750</p>
                         </div>
                     </div>
                 </div><br><br>
@@ -169,22 +169,22 @@
                     <div class="card" style="width:18rem;">
                         <img src="./assets/nobackpizza.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
+                            <h4>One Piecer</h4>
+                            <p class="card-text">Ksh 250</p>
                         </div>
                     </div>
                     <div class="card" style="width:18rem;">
                         <img src="./assets/nobackpizza.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
+                            <h4>Pizza Kadogo</h4>
+                            <p class="card-text">Ksh 500 </p>
                         </div>
                     </div>
                     <div class="card" style="width:18rem;">
                         <img src="./assets/nobackpizza.png" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                                of the card's content.</p>
+                            <h4>Regular</h4>
+                            <p class="card-text">Ksh 650</p>
                         </div>
                     </div>
                 </div><br><br>
