--- a/index.html
+++ b/index.html
@@ -217,6 +217,9 @@
                     <option value="">Large</option>
                     <option value="">Medium</option>
                     <option value="">Small</option>
+                    <option value="">One Piecer</option>
+                    <option value="">Regular</option>
+                    <option value="">Pizza Kadogo</option>
                 </select><br><br><br><br><br>
 
                 <select name="" id="crust">
