modify order section

--- a/index.html
+++ b/index.html
@@ -214,29 +214,29 @@
 
                 <select name="" id="size">
                     <option value="" selected class="selected">Choose Your Size...</option>
-                    <option value="">Large</option>
-                    <option value="">Medium</option>
-                    <option value="">Small</option>
-                    <option value="">One Piecer</option>
-                    <option value="">Regular</option>
-                    <option value="">Pizza Kadogo</option>
+                    <option value="">Large(Ksh 1200)</option>
+                    <option value="">Medium(Ksh 900)</option>
+                    <option value="">Small(Ksh 750)</option>
+                    <option value="">One Piecer(Ksh 250)</option>
+                    <option value="">Regular(Ksh 650)</option>
+                    <option value="">Pizza Kadogo(Ksh 500)</option>
                 </select><br><br><br><br><br>
 
                 <select name="" id="crust">
                     <option value="" selected class="selected">Choose Your Crust...</option>
-                    <option value="">Crispy</option>
-                    <option value="">Stuffed</option>
-                    <option value="">Gluten-free</option>
+                    <option value="">Crispy(Ksh350)</option>
+                    <option value="">Stuffed(Ksh250)</option>
+                    <option value="">Gluten-free(Ksh150)</option>
                 </select><br><br><br><br><br>
 
                 <select name="" id="toppings">
                     <option value="" selected class="selected">Choose Your Crust...</option>
-                    <option value="">Mushroom</option>
-                    <option value="">Sausage</option>
-                    <option value="">Bacon</option>
-                    <option value="">Extra Cheese</option>
-                    <option value="">Pineapple</option>
-                    <option value="">Pepperoni</option>
+                    <option value="">Mushroom(Ksh 200)</option>
+                    <option value="">Sausage(Ksh 180)</option>
+                    <option value="">Bacon(Ksh 280)</option>
+                    <option value="">Extra Cheese(Ksh 200)</option>
+                    <option value="">Pineapple(Ksh 150)</option>
+                    <option value="">Pepperoni(Ksh 250)</option>
                 </select><br><br><br><br>
 
                 <input name="" type="number" id="number" placeholder="Number of pizzas" min="1">
