--- a/index.html
+++ b/index.html
@@ -198,8 +198,8 @@
         <div class="container-fluid" id="selection">
             <h2>Place Your Order</h2><br>
             <div class="selection">
-                <select name="" id="pnames">
-                    <option value="" selected class="selected">Choose Your Flavour...</option>
+                <select name="" id="pnames" class="validate">
+                    <option value="selected" selected class="selected">Choose Your Flavour...</option>
                     <option value="">Cheese Pizza</option>
                     <option value="">Veggie Pizza</option>
                     <option value="">Pepperoni Pizza</option>
@@ -212,8 +212,8 @@
                     <option value="">Works Pizza</option>
                 </select><br><br><br><br><br><br>
 
-                <select name="" id="size">
-                    <option value="" selected class="selected">Choose Your Size...</option>
+                <select name="" id="size" class="validate">
+                    <option value="selected" selected class="selected">Choose Your Size...</option>
                     <option value="">Large(Ksh 1200)</option>
                     <option value="">Medium(Ksh 900)</option>
                     <option value="">Small(Ksh 750)</option>
@@ -222,15 +222,15 @@
                     <option value="">Pizza Kadogo(Ksh 500)</option>
                 </select><br><br><br><br><br>
 
-                <select name="" id="crust">
-                    <option value="" selected class="selected">Choose Your Crust...</option>
+                <select name="" id="crust" class="validate">
+                    <option value="selected" selected class="selected">Choose Your Crust...</option>
                     <option value="">Crispy(Ksh350)</option>
                     <option value="">Stuffed(Ksh250)</option>
                     <option value="">Gluten-free(Ksh150)</option>
                 </select><br><br><br><br><br>
 
-                <select name="" id="toppings">
-                    <option value="" selected class="selected">Choose Your Crust...</option>
+                <select name="" id="toppings" class="validate">
+                    <option value="selected" selected class="selected">Choose Your Toppings...</option>
                     <option value="">Mushroom(Ksh 200)</option>
                     <option value="">Sausage(Ksh 180)</option>
                     <option value="">Bacon(Ksh 280)</option>
@@ -239,9 +239,9 @@
                     <option value="">Pepperoni(Ksh 250)</option>
                 </select><br><br><br><br>
 
-                <input name="" type="number" id="number" placeholder="Number of pizzas" min="1">
+                <input name="" value="selected" type="number" id="number" placeholder="Number of pizzas" min="1" class="validate">
             </div><br><br>
-            <button class="btn-outline" id="btnn" onclick="">Order</button><br><br>
+            <button class="btn-outline" id="btnn" onclick=" return validate()">Order</button><br><br>
             <div id="cart"></div><br>
             
         </div>
