add another constructor function

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 
                 <input name="" value="selected" type="number" id="number" placeholder="Number of pizzas" min="1" class="validate">
             </div><br><br>
-            <button class="btn-outline" id="btnn" onclick=" return validate()">Order</button><br><br>
+            <button class="btn-outline" id="btnn" onclick=" return Bill()">Order</button><br><br>
             <div id="cart"></div><br>
             
         </div>
