--- a/index.html
+++ b/index.html
@@ -198,52 +198,78 @@
         <div class="container-fluid" id="selection">
             <h2>Place Your Order</h2><br>
             <div class="selection">
-                <select name="" id="pnames" class="validate">
-                    <option value="selected" selected class="selected">Choose Your Flavour...</option>
-                    <option value="">Cheese Pizza</option>
-                    <option value="">Veggie Pizza</option>
-                    <option value="">Pepperoni Pizza</option>
-                    <option value="">Meat Pizza</option>
-                    <option value="">Margherita Pizza</option>
-                    <option value="">BBQ Chicken Pizza</option>
-                    <option value="">Hawaiian Pizza</option>
-                    <option value="">Buffalo Pizza</option>
-                    <option value="">Supreme Pizza</option>
-                    <option value="">Works Pizza</option>
-                </select><br><br><br><br><br><br>
 
-                <select name="" id="size" class="validate">
-                    <option value="selected" selected class="selected">Choose Your Size...</option>
-                    <option value="">Large(Ksh 1200)</option>
-                    <option value="">Medium(Ksh 900)</option>
-                    <option value="">Small(Ksh 750)</option>
-                    <option value="">One Piecer(Ksh 250)</option>
-                    <option value="">Regular(Ksh 650)</option>
-                    <option value="">Pizza Kadogo(Ksh 500)</option>
-                </select><br><br><br><br><br>
+                <div class="customer">
+                    <div id="cart">
+                        <h3>Your Order is;</h3><br>
+                        <li>Pizza;</li><br>
+                        <li>Size;</li><br>
+                        <li>Topping;</li><br>
+                        <li>Crust;</li><br>
+                        <li>Amount;</li><br>
+                        <li>Total;</li><br>
+                    </div>
+                    <div class="delivery">
+                        <h3>Would You like it to be delivered?</h3>
+                        <form action="">
+                            
+                              <input type="radio" id="yes" name="fav_dev" value="Yes">
+                              <label for="html">Yes</label><br>
+                              <input type="radio" id="no" name="fav_dev" value="No">
+                              <label for="css">No</label><br>
+                             
+                        </form>
+                    </div>
+                </div><br>
+                <div class="cus">
+                    <select name="" id="pnames" class="validate">
+                        <option value="selected" selected class="selected">Choose Your Flavour...</option>
+                        <option value="">Cheese Pizza</option>
+                        <option value="">Veggie Pizza</option>
+                        <option value="">Pepperoni Pizza</option>
+                        <option value="">Meat Pizza</option>
+                        <option value="">Margherita Pizza</option>
+                        <option value="">BBQ Chicken Pizza</option>
+                        <option value="">Hawaiian Pizza</option>
+                        <option value="">Buffalo Pizza</option>
+                        <option value="">Supreme Pizza</option>
+                        <option value="">Works Pizza</option>
+                    </select><br><br><br><br><br><br>
 
-                <select name="" id="crust" class="validate">
-                    <option value="selected" selected class="selected">Choose Your Crust...</option>
-                    <option value="">Crispy(Ksh350)</option>
-                    <option value="">Stuffed(Ksh250)</option>
-                    <option value="">Gluten-free(Ksh150)</option>
-                </select><br><br><br><br><br>
+                    <select name="" id="size" class="validate">
+                        <option value="selected" selected class="selected">Choose Your Size...</option>
+                        <option value="">Large(Ksh 1200)</option>
+                        <option value="">Medium(Ksh 900)</option>
+                        <option value="">Small(Ksh 750)</option>
+                        <option value="">One Piecer(Ksh 250)</option>
+                        <option value="">Regular(Ksh 650)</option>
+                        <option value="">Pizza Kadogo(Ksh 500)</option>
+                    </select><br><br><br><br><br>
 
-                <select name="" id="toppings" class="validate">
-                    <option value="selected" selected class="selected">Choose Your Toppings...</option>
-                    <option value="">Mushroom(Ksh 200)</option>
-                    <option value="">Sausage(Ksh 180)</option>
-                    <option value="">Bacon(Ksh 280)</option>
-                    <option value="">Extra Cheese(Ksh 200)</option>
-                    <option value="">Pineapple(Ksh 150)</option>
-                    <option value="">Pepperoni(Ksh 250)</option>
-                </select><br><br><br><br>
+                    <select name="" id="crust" class="validate">
+                        <option value="selected" selected class="selected">Choose Your Crust...</option>
+                        <option value="">Crispy(Ksh350)</option>
+                        <option value="">Stuffed(Ksh250)</option>
+                        <option value="">Gluten-free(Ksh150)</option>
+                    </select><br><br><br><br><br>
 
-                <input name="" value="selected" type="number" id="number" placeholder="Number of pizzas" min="1" class="validate">
+                    <select name="" id="toppings" class="validate">
+                        <option value="selected" selected class="selected">Choose Your Toppings...</option>
+                        <option value="">Mushroom(Ksh 200)</option>
+                        <option value="">Sausage(Ksh 180)</option>
+                        <option value="">Bacon(Ksh 280)</option>
+                        <option value="">Extra Cheese(Ksh 200)</option>
+                        <option value="">Pineapple(Ksh 150)</option>
+                        <option value="">Pepperoni(Ksh 250)</option>
+                    </select><br><br><br><br>
+
+                    <input name="" value="selected" type="number" id="number" placeholder="Number of pizzas" min="1"
+                        class="validate">
+                </div>
             </div><br><br>
             <button class="btn-outline" id="btnn" onclick=" return Bill()">Order</button><br><br>
-            <div id="cart"></div><br>
-            
+
+
         </div>
         <!---End of Order Section-->
         <!----Start of Footer Section-->
