add order functionality

--- a/index.html
+++ b/index.html
@@ -227,16 +227,16 @@
                 <div class="cus">
                     <select name="" id="pname" class="validate" required ">
                         <option value="selected" selected class="selected">Choose Your Flavour...</option>
-                        <option value="Cheese">Cheese Pizza</option>
-                        <option value="Veggie">Veggie Pizza</option>
-                        <option value="Pepperoni">Pepperoni Pizza</option>
-                        <option value="Meat">Meat Pizza</option>
-                        <option value="Margherita">Margherita Pizza</option>
-                        <option value="BBQ Chicken">BBQ Chicken Pizza</option>
-                        <option value="Hawaiian">Hawaiian Pizza</option>
-                        <option value="Buffalo">Buffalo Pizza</option>
-                        <option value="Supreme">Supreme Pizza</option>
-                        <!-- <option value="Works">Works Pizza</option> -->
+                        <option value="Cheese Pizza">Cheese Pizza</option>
+                        <option value="Veggie Pizza">Veggie Pizza</option>
+                        <option value="Pepperoni Pizza">Pepperoni Pizza</option>
+                        <option value="Meat Pizza">Meat Pizza</option>
+                        <option value="Margherita Pizza">Margherita Pizza</option>
+                        <option value="BBQ Chicken Pizza">BBQ Chicken Pizza</option>
+                        <option value="Hawaiian Pizza">Hawaiian Pizza</option>
+                        <option value="Buffalo Pizza">Buffalo Pizza</option>
+                        <option value="Supreme Pizza">Supreme Pizza</option>
+                        <option value="Works Pizza">Works Pizza</option>
                     </select><br><br><br><br><br><br>
 
                     <select name="" id="size" class="validate" required >
